# DaoZhu

./: .gitignore  AGENTS.md  AccoBot.spec  PROJECT.md  README.md  README_en.md  accobot_web.py  build_exe.py  config.json  daozhu.spec  daozhu_main.py  launcher.py  pyproject.toml  skills-lock.json
.kiro/settings/: mcp.json
accobot/: __init__.py  agent.py  cli.py  config.py  heartbeat.py  proactive.py  session_compress.py  soul.py
accobot/db/: __init__.py  accounting.py  chat_history.py  manager.py  master.py  standards.py  templates.py
accobot/gateway/: __init__.py  base.py  runner.py
accobot/mcp/: __init__.py  client.py
accobot/skills/: __init__.py  loader.py
accobot/standards/: __init__.py
accobot/tools/: __init__.py  analytics_tool.py  browser_tool.py  config_tool.py  file_tool.py  ledger_tool.py  mcp_manage_tool.py  memory_tool.py  ocr_tool.py  period_end_tool.py  quality_check_tool.py  quality_engine.py  reconciliation_tool.py  registry.py  tax_tool.py  (+4 more)
daozhu/: __init__.py  agent.py  app.py  chat_db.py  chat_service.py  config.py  config_db.py  memory_db.py  memory_service.py  skill_loader.py  template_engine.py  tool_log_db.py  workspace_manager.py
requirements/: 003-create-workspaces-skill.md  005-platform-config.md  007-chat-backend.md  009-workspace-market.md  011-packaging.md  016-ui-fixes.md  017-workspace-data-interaction.md  018-fun-and-gamification.md  020-local-performance-detection.md  022-auto-onboarding-redirect.md  025-forum-gitee-issues.md  026-workspace-drag-sort.md  027-librarian-rename.md  028-ai-suggest-workspace.md  029-ai-status-and-stop.md  030-readme-open-workspace.md  034-delete-confirmation.md  035-tool-skill-disable.md  037-config-db.md  038-skill-tool-delete.md  040-ai-self-optimize.md  041-performance-optimization.md  043-gitee-remote-control.md  045-ollama-integration.md  049-tool-call-visual.md  050-tool-call-logging.md  2026-05-26-迭代待办.md  2026-05-29-batch-intake.md  AccoBot.code-workspace  README.md  REQ-001-agent-core.md  REQ-002-basic-config.md  REQ-003-voucher.md  REQ-004-journal.md  REQ-005-reconciliation.md  REQ-006-tax.md  REQ-007-ledger.md  REQ-008-report.md  REQ-009-analytics.md  REQ-010-web-ui.md  (+17 more)
scripts/: README.md  build_launcher.py  pack_release.py  publish_release.py
tests/: test_company_lifecycle.py  test_config.py  test_config_tools.py  test_database.py  test_mcp.py  test_memory.py  test_proactive.py  test_quality_engine.py  test_registry.py  test_reports.py  test_skills.py  test_standards.py  test_tax_reconcile_quality.py  test_voucher_tools.py
(+256 files in other folders)
