[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accobot"
version = "0.1.0"
description = "AI-powered accounting assistant — manage vouchers, journals, reconciliation, tax filing, and financial analysis through natural language"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AccoBot Team" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0,<2",
    "python-dotenv>=1.0.0,<2",
    "httpx>=0.27.0,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.13.0,<3",
    "rich>=13.0.0,<15",
    "prompt_toolkit>=3.0.0,<4",
    "mcp>=1.0.0,<2",
]

[project.optional-dependencies]
web = ["fastapi>=0.100.0,<1", "uvicorn[standard]>=0.20.0,<1", "python-multipart>=0.0.6,<1"]
ocr = ["paddleocr>=2.7.0,<3", "paddlepaddle>=2.5.0,<3"]
browser = ["playwright>=1.40.0,<2"]
dev = ["pytest>=8.0.0,<10", "pytest-asyncio>=0.21.0,<1", "ruff>=0.4.0,<1"]
all = [
    "accobot[web]",
    "accobot[dev]",
]

[project.scripts]
accobot = "accobot.cli:main"

[tool.setuptools.packages.find]
include = ["accobot", "accobot.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
