[project]
name = "daozhu"
version = "0.2.0"
description = "岛主 DaoZhu — 本地 AI 工作台平台"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "httpx>=0.27.0,<1",
    "python-dotenv>=1.0.0,<2",
]

[project.scripts]
daozhu = "daozhu_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pyinstaller>=6.0,<7", "pytest>=8.0,<9", "ruff>=0.4,<1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
